<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops Sorry</string>
    <string name="error_message">There was an error, please try again</string>
    <string name="error_button_ok_text">OK</string>
    <string name="network_unavailable_message">Sorry network is unavailable, check if Airplane mode is on</string>
    <string name="network_unavailable_title">Network Unavailable</string>
    <string name="dark_sky_message">
        <a href="https://darksky.net/poweredby">Powered by Dark Sky</a>
    </string>
    <string name="default_temperature_value">N/A</string>
    <string name="default_time_value">At -:— PM it will</string>
    <string name="default_location_value">Alcatraz Island, California</string>
    <string name="icon_image_view_desc">Icon image view for weather</string>
    <string name="humidity_label">humidity</string>
    <string name="humidity_default_value">N/A</string>
    <string name="percip_label">Rain/Snow?</string>
    <string name="default_percip_value">N/A</string>
    <string name="default_summary_value">Weather info currently unavailable</string>
    <string name="degree_icon_desc">degree icon image view</string>
    <string name="refresh_button">refresh button</string>
    <string name="hourly_forecast_button_text">HOURLY FORECAST</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="icon_for_recycler_content_desc">icon for recycler content</string>
</resources>
